--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "prop-types": "^15.6.0",
         "react": "^16.1.1",
         "react-dom": "^16.1.1",
+        "react-hook-form": "^5.3.1",
         "react-intl": "^2.4.0",
         "react-redux": "^5.0.6",
         "react-router-dom": "^4.2.2",
